[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/LevelSelect.gd" type="Script" id=1]
[ext_resource path="res://art/lock.png" type="Texture" id=2]
[ext_resource path="res://art/bean-down.png" type="Texture" id=4]
[ext_resource path="res://objects/FadeRect.tscn" type="PackedScene" id=8]
[ext_resource path="res://bitmapfonts/bbfont-blue-16x12.tres" type="BitmapFont" id=10]

[node name="LevelSelect" type="Node2D"]
script = ExtResource( 1 )

[node name="bg360x270" type="ColorRect" parent="."]
margin_right = 360.0
margin_bottom = 270.0
color = Color( 0, 0, 0, 1 )

[node name="frame" type="Node2D" parent="."]
position = Vector2( 20, 7 )

[node name="bg" type="ColorRect" parent="frame"]
margin_right = 320.0
margin_bottom = 256.0
color = Color( 0, 0, 0, 1 )

[node name="cursor_bean" type="Sprite" parent="frame"]
visible = false
position = Vector2( 100, 144 )
texture = ExtResource( 4 )
centered = false

[node name="cursor_label" type="Label" parent="frame"]
margin_left = 24.0
margin_top = 56.0
margin_right = 36.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 10 )
text = ">"

[node name="title" type="Label" parent="frame"]
margin_left = 40.0
margin_top = 16.0
margin_right = 292.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 10 )
text = "SELECT ORIGINAL LEVEL"

[node name="back" type="Label" parent="frame"]
margin_left = 40.0
margin_top = 216.0
margin_right = 184.0
margin_bottom = 232.0
custom_fonts/font = ExtResource( 10 )
text = "BACK TO MENU"

[node name="grid" type="Node2D" parent="frame"]
visible = false

[node name="ColorRect1" type="ColorRect" parent="frame/grid"]
margin_left = 40.0
margin_top = 56.0
margin_right = 56.0
margin_bottom = 72.0
color = Color( 0.239216, 0.0705882, 0.0705882, 1 )

[node name="ColorRect2" type="ColorRect" parent="frame/grid"]
margin_left = 96.0
margin_top = 56.0
margin_right = 112.0
margin_bottom = 72.0
color = Color( 0.239216, 0.0705882, 0.0705882, 1 )

[node name="ColorRect3" type="ColorRect" parent="frame/grid"]
margin_left = 152.0
margin_top = 56.0
margin_right = 168.0
margin_bottom = 72.0
color = Color( 0.239216, 0.0705882, 0.0705882, 1 )

[node name="ColorRect4" type="ColorRect" parent="frame/grid"]
margin_left = 208.0
margin_top = 56.0
margin_right = 224.0
margin_bottom = 72.0
color = Color( 0.239216, 0.0705882, 0.0705882, 1 )

[node name="ColorRect5" type="ColorRect" parent="frame/grid"]
margin_left = 264.0
margin_top = 56.0
margin_right = 280.0
margin_bottom = 72.0
color = Color( 0.239216, 0.0705882, 0.0705882, 1 )

[node name="ColorRect6" type="ColorRect" parent="frame/grid"]
margin_left = 40.0
margin_top = 96.0
margin_right = 56.0
margin_bottom = 112.0
color = Color( 0.239216, 0.0705882, 0.0705882, 1 )

[node name="ColorRect7" type="ColorRect" parent="frame/grid"]
margin_left = 96.0
margin_top = 96.0
margin_right = 112.0
margin_bottom = 112.0
color = Color( 0.239216, 0.0705882, 0.0705882, 1 )

[node name="ColorRect8" type="ColorRect" parent="frame/grid"]
margin_left = 152.0
margin_top = 96.0
margin_right = 168.0
margin_bottom = 112.0
color = Color( 0.239216, 0.0705882, 0.0705882, 1 )

[node name="ColorRect9" type="ColorRect" parent="frame/grid"]
margin_left = 208.0
margin_top = 96.0
margin_right = 224.0
margin_bottom = 112.0
color = Color( 0.239216, 0.0705882, 0.0705882, 1 )

[node name="ColorRect10" type="ColorRect" parent="frame/grid"]
margin_left = 264.0
margin_top = 96.0
margin_right = 280.0
margin_bottom = 112.0
color = Color( 0.239216, 0.0705882, 0.0705882, 1 )

[node name="ColorRect11" type="ColorRect" parent="frame/grid"]
margin_left = 40.0
margin_top = 136.0
margin_right = 56.0
margin_bottom = 152.0
color = Color( 0.239216, 0.0705882, 0.0705882, 1 )

[node name="ColorRect12" type="ColorRect" parent="frame/grid"]
margin_left = 96.0
margin_top = 136.0
margin_right = 112.0
margin_bottom = 152.0
color = Color( 0.239216, 0.0705882, 0.0705882, 1 )

[node name="ColorRect13" type="ColorRect" parent="frame/grid"]
margin_left = 152.0
margin_top = 136.0
margin_right = 168.0
margin_bottom = 152.0
color = Color( 0.239216, 0.0705882, 0.0705882, 1 )

[node name="ColorRect14" type="ColorRect" parent="frame/grid"]
margin_left = 208.0
margin_top = 136.0
margin_right = 224.0
margin_bottom = 152.0
color = Color( 0.239216, 0.0705882, 0.0705882, 1 )

[node name="ColorRect15" type="ColorRect" parent="frame/grid"]
margin_left = 264.0
margin_top = 136.0
margin_right = 280.0
margin_bottom = 152.0
color = Color( 0.239216, 0.0705882, 0.0705882, 1 )

[node name="ColorRect16" type="ColorRect" parent="frame/grid"]
margin_left = 40.0
margin_top = 176.0
margin_right = 56.0
margin_bottom = 192.0
color = Color( 0.239216, 0.0705882, 0.0705882, 1 )

[node name="ColorRect17" type="ColorRect" parent="frame/grid"]
margin_left = 96.0
margin_top = 176.0
margin_right = 112.0
margin_bottom = 192.0
color = Color( 0.239216, 0.0705882, 0.0705882, 1 )

[node name="ColorRect18" type="ColorRect" parent="frame/grid"]
margin_left = 152.0
margin_top = 176.0
margin_right = 168.0
margin_bottom = 192.0
color = Color( 0.239216, 0.0705882, 0.0705882, 1 )

[node name="ColorRect19" type="ColorRect" parent="frame/grid"]
margin_left = 208.0
margin_top = 176.0
margin_right = 224.0
margin_bottom = 192.0
color = Color( 0.239216, 0.0705882, 0.0705882, 1 )

[node name="ColorRect20" type="ColorRect" parent="frame/grid"]
margin_left = 264.0
margin_top = 176.0
margin_right = 280.0
margin_bottom = 192.0
color = Color( 0.239216, 0.0705882, 0.0705882, 1 )

[node name="locks" type="Node2D" parent="frame"]

[node name="Lock1" type="Sprite" parent="frame/locks"]
position = Vector2( 48, 64 )
texture = ExtResource( 2 )

[node name="Lock2" type="Sprite" parent="frame/locks"]
position = Vector2( 104, 64 )
texture = ExtResource( 2 )

[node name="Lock3" type="Sprite" parent="frame/locks"]
position = Vector2( 160, 64 )
texture = ExtResource( 2 )

[node name="Lock4" type="Sprite" parent="frame/locks"]
position = Vector2( 216, 64 )
texture = ExtResource( 2 )

[node name="Lock5" type="Sprite" parent="frame/locks"]
position = Vector2( 272, 64 )
texture = ExtResource( 2 )

[node name="Lock6" type="Sprite" parent="frame/locks"]
position = Vector2( 48, 104 )
texture = ExtResource( 2 )

[node name="Lock7" type="Sprite" parent="frame/locks"]
position = Vector2( 104, 104 )
texture = ExtResource( 2 )

[node name="Lock8" type="Sprite" parent="frame/locks"]
position = Vector2( 160, 104 )
texture = ExtResource( 2 )

[node name="Lock9" type="Sprite" parent="frame/locks"]
position = Vector2( 216, 104 )
texture = ExtResource( 2 )

[node name="Lock10" type="Sprite" parent="frame/locks"]
position = Vector2( 272, 104 )
texture = ExtResource( 2 )

[node name="Lock11" type="Sprite" parent="frame/locks"]
position = Vector2( 48, 144 )
texture = ExtResource( 2 )

[node name="Lock12" type="Sprite" parent="frame/locks"]
position = Vector2( 104, 144 )
texture = ExtResource( 2 )

[node name="Lock13" type="Sprite" parent="frame/locks"]
position = Vector2( 160, 144 )
texture = ExtResource( 2 )

[node name="Lock14" type="Sprite" parent="frame/locks"]
position = Vector2( 216, 144 )
texture = ExtResource( 2 )

[node name="Lock15" type="Sprite" parent="frame/locks"]
position = Vector2( 272, 144 )
texture = ExtResource( 2 )

[node name="Lock16" type="Sprite" parent="frame/locks"]
position = Vector2( 48, 184 )
texture = ExtResource( 2 )

[node name="Lock17" type="Sprite" parent="frame/locks"]
position = Vector2( 104, 184 )
texture = ExtResource( 2 )

[node name="Lock18" type="Sprite" parent="frame/locks"]
position = Vector2( 160, 184 )
texture = ExtResource( 2 )

[node name="Lock19" type="Sprite" parent="frame/locks"]
position = Vector2( 216, 184 )
texture = ExtResource( 2 )

[node name="Lock20" type="Sprite" parent="frame/locks"]
position = Vector2( 272, 184 )
texture = ExtResource( 2 )

[node name="numbers" type="Node2D" parent="frame"]

[node name="lev1" type="Label" parent="frame/numbers"]
margin_left = 42.0
margin_top = 56.0
margin_right = 74.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 10 )
text = "1"

[node name="lev2" type="Label" parent="frame/numbers"]
margin_left = 98.0
margin_top = 56.0
margin_right = 130.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 10 )
text = "2"

[node name="lev3" type="Label" parent="frame/numbers"]
margin_left = 154.0
margin_top = 56.0
margin_right = 186.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 10 )
text = "3"

[node name="lev4" type="Label" parent="frame/numbers"]
margin_left = 210.0
margin_top = 56.0
margin_right = 242.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 10 )
text = "4"

[node name="lev5" type="Label" parent="frame/numbers"]
margin_left = 266.0
margin_top = 56.0
margin_right = 298.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 10 )
text = "5"

[node name="lev6" type="Label" parent="frame/numbers"]
margin_left = 42.0
margin_top = 96.0
margin_right = 74.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 10 )
text = "6"

[node name="lev7" type="Label" parent="frame/numbers"]
margin_left = 98.0
margin_top = 96.0
margin_right = 130.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 10 )
text = "7"

[node name="lev8" type="Label" parent="frame/numbers"]
margin_left = 154.0
margin_top = 96.0
margin_right = 186.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 10 )
text = "8"

[node name="lev9" type="Label" parent="frame/numbers"]
margin_left = 210.0
margin_top = 96.0
margin_right = 242.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 10 )
text = "9"

[node name="lev10" type="Label" parent="frame/numbers"]
margin_left = 258.0
margin_top = 96.0
margin_right = 290.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 10 )
text = "10"

[node name="lev11" type="Label" parent="frame/numbers"]
margin_left = 34.0
margin_top = 136.0
margin_right = 66.0
margin_bottom = 152.0
custom_fonts/font = ExtResource( 10 )
text = "11"

[node name="lev12" type="Label" parent="frame/numbers"]
margin_left = 90.0
margin_top = 136.0
margin_right = 122.0
margin_bottom = 152.0
custom_fonts/font = ExtResource( 10 )
text = "12"

[node name="lev13" type="Label" parent="frame/numbers"]
margin_left = 146.0
margin_top = 136.0
margin_right = 178.0
margin_bottom = 152.0
custom_fonts/font = ExtResource( 10 )
text = "13"

[node name="lev14" type="Label" parent="frame/numbers"]
margin_left = 202.0
margin_top = 136.0
margin_right = 234.0
margin_bottom = 152.0
custom_fonts/font = ExtResource( 10 )
text = "14"

[node name="lev15" type="Label" parent="frame/numbers"]
margin_left = 258.0
margin_top = 136.0
margin_right = 290.0
margin_bottom = 152.0
custom_fonts/font = ExtResource( 10 )
text = "15"

[node name="lev16" type="Label" parent="frame/numbers"]
margin_left = 34.0
margin_top = 176.0
margin_right = 66.0
margin_bottom = 192.0
custom_fonts/font = ExtResource( 10 )
text = "16"

[node name="lev17" type="Label" parent="frame/numbers"]
margin_left = 90.0
margin_top = 176.0
margin_right = 122.0
margin_bottom = 192.0
custom_fonts/font = ExtResource( 10 )
text = "17"

[node name="lev18" type="Label" parent="frame/numbers"]
margin_left = 146.0
margin_top = 176.0
margin_right = 178.0
margin_bottom = 192.0
custom_fonts/font = ExtResource( 10 )
text = "18"

[node name="lev19" type="Label" parent="frame/numbers"]
margin_left = 202.0
margin_top = 176.0
margin_right = 234.0
margin_bottom = 192.0
custom_fonts/font = ExtResource( 10 )
text = "19"

[node name="lev20" type="Label" parent="frame/numbers"]
margin_left = 260.0
margin_top = 176.0
margin_right = 292.0
margin_bottom = 192.0
custom_fonts/font = ExtResource( 10 )
text = "20"

[node name="FadeRect" parent="." instance=ExtResource( 8 )]
